--- a/b/client/nav.html
+++ b/b/client/nav.html
@@ -8,7 +8,7 @@
 	  <li><a href="{{pathFor route = 'senior'}}"><span class="glyphicon glyphicon-info-sign"></span>Senior</a></li>
 	  <li><a href="{{pathFor route = 'teen'}}"><span class="glyphicon glyphicon-info-sign"></span>Teen</a></li>
 	  <li class="icon">
-		<a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
+		<a href="javascript:void(0);">&#9776;</a>
 	  </li>
 	<img src="http://imagizer.imageshack.us/v2/320x240q90/921/s6RIfC.png"  id="mainlogo" class="img-responsive" alt="Bridged" width="105" height="55">
 	</ul>
