--- a/b/client/seniorForm.html
+++ b/b/client/seniorForm.html
@@ -1,9 +1,15 @@
 <template name = "seniorForm">
 	<form class = "seniorForm">
 		<h3> Senior </h3>
-
+		
+		<p> Email: <input id = "email" type = "email" name = "email"></p>
+		<p> Password: <input id = "password" type = "password" name = "password"> </p>
+		
 		<p> First Name: <input id = "firstName" type = "firstName" name = "firstName"> </p>
 		<p> Last Name: <input id = "lastName" type = "lastName" name = "lastName"> </p>
 		<p> Entrance Number: <input id = "entrance" type = "entrance" name = "entrance"> </p>
+		
+		<p class = "registerButton"> <input type = "submit" value = "Register"> </p>
+		
 	</form>
 </template>
