admin and extra stuff

--- a/client/home.html
+++ b/client/home.html
@@ -1,3 +1,50 @@
 <template name = "home">
-	<h3> Bridged </h3>
+	<div class = "topHome">
+  <div class = "bridgeGap">
+    <h1> LET'S BRIDGE THE GAP </h1>
+    <p>Together, by connecting elders who want to learn with bright teens who know tech, we can do it. </p>
+  </div>
+  <div class= "learnmore">
+    <p> Learn More</p>
+    </div>
+</div>
+
+
+
+<!-- second page -->
+
+
+
+<div class = "secondHome">
+  
+  <div class = "aboutHome">
+  <div class = "row">
+	<div id = "BridgedDescription">
+	  <div class = "col-sm-4 col-xs-12">
+		<h3> A service exclusive to Elk Ridge Village residents, Bridged’s mission is to connect elders who want to learn tech with teen volunteers who can show them how. If you are an elder, you can sign up to learn a tech skill and if you are a teen, you can apply to teach it!</h3>
+	  </div>
+	 </div>
+	  <div class = "col-sm-8 col-xs-12">
+		<img id = "homeboxes" src = "https://files.slack.com/files-tmb/T2ENBKC49-F3XPRRY75-6213a8cee4/bring_it_on_icons_raster_1024.png">
+	  </div>
+  </div>
+  </div>
+
+<div class = "getStarted">
+	<div class = "row">
+	<div class = "col-sm-6 col-xs-12">
+		<h1>SENIORS</h1>
+	  <h3>GET STARTED</h3>
+
+		<a href="#" class="btn">HERE</a>
+	</div>
+	<div class = "col-sm-6 col-xs-12">
+	  <h1>TEENS</h1>
+	  <h3>GET STARTED</h3>
+
+		<a href="#" class="btn">HERE</a>
+	</div>
+	</div>
+</div>
+</div>
 </template>
