--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,8 @@
 <head>
   <title>Bridged</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
 <body>
