--- a/client/contact.html
+++ b/client/contact.html
@@ -1,13 +1,13 @@
 <template name = "contactUs">
 	<form class = "contactUs">
-		<h3> Contact Us </h3>
-		<p> Email: <input id = "email" type = "email" name = "email"></p>
+		<center> <h3 class = "signIn"> Contact Us </h3> </center>
+		<p> <div class = "fields"> EMAIL </div> <input id = "email" type = "email" name = "email"></p>
 
-		<p> Name: <input id = "name" type = "name" name = "name"> </p>
+		<p> <div class = "fields"> NAME </div> <input id = "name" type = "name" name = "name"> </p>
 
-		<p> Message: <input id = "message" type = "message" name = "message"> </p>
+		<p> <div class = "fields"> MESSAGE </div> <input id = "message" type = "message" name = "message"> </p>
 		
-		<p class = "registerButton"> <input type = "submit" value = "Register"> </p>
+		<p class = "center"> <input id = "registerButton" type = "submit" value = "SUBMIT"> </p>
 		
 	</form>
 </template>
