--- a/client/home.html
+++ b/client/home.html
@@ -41,9 +41,9 @@
 	<div class = "row">
 	<div class = "col-sm-5 col-xs-12 start1">
 		<div class = "seniorsTeen">
-			<h1>SENIORS</h1>
+			<h1 style = "font-family: Comfortaa;">SENIORS</h1>
 		</div>
-		  <h3>GET STARTED</h3>
+		  <h3 style = "font-family: Oswald;">GET STARTED</h3>
 
 			<a href="{{pathFor route = 'senior'}}" class="btn">HERE</a>
 	</div>
@@ -52,9 +52,9 @@
 	</div>
 	<div class = "col-sm-5 col-xs-12 start2">
 		<div class = "seniorsTeen">
-		  <h1>TEENS</h1>
+		  <h1 style = "font-family: Comfortaa;">TEENS</h1>
 		</div>
-		  <h3>GET STARTED</h3>
+		  <h3 style = "font-family: Oswald;">GET STARTED</h3>
 
 			<a href="{{pathFor route = 'teen'}}" class="btn">HERE</a>
 		</div>
