--- a/client/about.html
+++ b/client/about.html
@@ -1,7 +1,7 @@
 <template name = "about">
-
-	<h1 class = "aboutTitle"> About Us </h1>
-	<p> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+	<div class = "aboutPage">
+	<h3 class = "signIn"> About Us </h3>
+	<p style = "font-style: Raleway; font-size: 20px; text-align: left;"> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 	incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
 	exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
 	irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
@@ -12,5 +12,5 @@
 	irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
 	pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
 	officia deserunt mollit anim id est laborum. </p>
-	
+	</div>
 </template>
