--- a/client/main.html
+++ b/client/main.html
@@ -3,6 +3,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 </head>
 
 <body>
