--- a/client/teenForm.html
+++ b/client/teenForm.html
@@ -1,84 +1,96 @@
 <template name = "teenForm">
 	<form class = "teenForm">
-		<h3> Teen </h3>
-		<p> Email: <input id = "email" type = "email" name = "email"></p>
-		
-		<p> First Name: <input id = "firstName" type = "firstName" name = "firstName"> </p>
-		<p> Last Name: <input id = "lastName" type = "lastName" name = "lastName"> </p>
-		<p> Phone Number: <input id = "phone" type = "phone" name = "phone"> </p>
-		
+		<h3 class = "signIn"> Start your teen application </h3>
+		<div class = "row">
+		<div class = "col-md-6 col-sm-12">
+			<p> <div class = "fields"> FIRST NAME </div><input id = "firstName" type = "firstName" name = "firstName"> </p>
+		</div>
+		<div class = "col-md-6 col-sm-12">
+			<p> <div class = "fields"> LAST NAME </div><input id = "lastName" type = "lastName" name = "lastName"> </p>
+		</div>
+		</div>
+		<div class = "row">
+		<div class = "col-md-6 col-sm-12">
+			<p> <div class = "fields"> PHONE NUMBER </div><input id = "phone" type = "phone" name = "phone"> </p>
+		</div>
+		<div class = "col-md-6 col-sm-12">
+			<p> <div class = "fields"> EMAIL </div><input id = "email" type = "email" name = "email"></p>
+		</div> </div>
 		<div class = "header">
-	  <h1> Click on the skills you'd like to learn.</h1><p>Roll your mouse over a skill to learn more about it</p>
+	  <h1 class = "learning"> What would you like to teach? </h1><p class = "learnPara">Roll your mouse over a skill to learn more about it and click on the box to add it to your list!</p>
 	</div>
 	<br/>
-
+	
+	<center>
 	<div class = "boxes">
-	<div class="container">
+	<div class="boxContainer">
 	  <img class = "box"
-	 src="https://files.slack.com/files-tmb/T2ENBKC49-F3X5ST9L1-478d975b91/bring_it_on_icons_raster-01_1024.png" onclick="selectMeOne()" />
+	 src="https://files.slack.com/files-tmb/T2ENBKC49-F3X5ST9L1-478d975b91/bring_it_on_icons_raster-01_1024.png"/>
 	 <input id="firstBox" name="firstBox" type="checkbox" value="first" class = "hidden"> 
-	   <div class="overlay" onclick="selectMeOne()">
+	   <div id = "firstBox" class="overlay">
 		<div class="text"><p>Communication</p></div>
 	</div>
 	  </div>
 	  
 	 
-	<div class="container">
-	  <img class="box2" src ="https://files.slack.com/files-tmb/T2ENBKC49-F3XUBRL2H-189eee501b/bring_it_on_icons_raster-02_1024.png" onclick="selectMeTwo()"/>
+	<div class="boxContainer">
+	  <img class="box2" src ="https://files.slack.com/files-tmb/T2ENBKC49-F3XUBRL2H-189eee501b/bring_it_on_icons_raster-02_1024.png"/>
 	  <input id="secondBox" name="secondBox" type="checkbox" value="second" class = "hidden"/>
-	<div class="overlay" onclick="selectMeTwo()">
+	<div id = "secondBox" class="overlay">
 	  <div class="text"><p>The Internet</p></div>
 	  </div>
 	</div>
 
 	  
 	  
-	<div class="container">  
-	  <img class="box3" src ="https://files.slack.com/files-tmb/T2ENBKC49-F3YGBK64E-f6cecbc886/bring_it_on_icons_raster-03_1024.png" onclick="selectMeThree()"/>
+	<div class="boxContainer">  
+	  <img class="box3" src ="https://files.slack.com/files-tmb/T2ENBKC49-F3YGBK64E-f6cecbc886/bring_it_on_icons_raster-03_1024.png"/>
 	  <input id="thirdBox" name="thirdBox" type="checkbox" value="third" class = "hidden"/>
-	<div class="overlay" onclick="selectMeThree()">
+	<div id = "thirdBox" class="overlay">
 		<div class="text"><p>Mobile Devices</p></div>
 	  </div>
 	</div>
 	<br>
 	  
-	 <div class="container">
-	  <img class="box4" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRNN7M-8928117b84/bring_it_on_icons_raster-04_1024.png" onclick="selectMeFour()" />
+	 <div class="boxContainer">
+	  <img class="box4" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRNN7M-8928117b84/bring_it_on_icons_raster-04_1024.png" />
 	  <input id="fourBox" name="fourBox" type="checkbox" value="fourth" class = "hidden"/>
-	<div class="overlay" onclick="selectMeFour()">
+	<div id = "fourBox" class="overlay">
 		<div class="text"><p>Social Media</p></div>
 	  </div>
 	</div>
 		
 		
-	 <div class="container">
-	  <img class="box5" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRNTK5-3ce8095dbf/bring_it_on_icons_raster-05_1024.png" onclick="selectMeFive()" />
+	 <div class="boxContainer">
+	  <img class="box5" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRNTK5-3ce8095dbf/bring_it_on_icons_raster-05_1024.png" />
 	  <input id="fiveBox" name="fiveBox" type="checkbox" value="fifth" class = "hidden"/>
-	  <div class="overlay"  onclick="selectMeFive()">
+	  <div id = "fiveBox" class="overlay">
 		<div class="text"><p>Computers</p></div>
 	  </div>
 	</div>
 		  
 		  
-	<div class="container">      
-	  <img class="box6" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRPAUT-1e0973148f/bring_it_on_icons_raster-06_1024.png" onclick="selectMeSix()" />
+	<div class="boxContainer">      
+	  <img class="box6" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRPAUT-1e0973148f/bring_it_on_icons_raster-06_1024.png"/>
 	  <input id="sixBox" name="sixBox" type="checkbox" value="sixth" class = "hidden"/>
-	<div class="overlay" onclick="selectMeSix()">
+	<div id = "sixBox" class="overlay">
 		<div class="text"><p>Word Processing</p></div>
 	  </div>
 	</div>
 	</div>
-
-	<p>
+	</center>
+	
+	
+	<p class = "learnPara">
 	Skills you have selected: <div id="display">
 	</div>
 	</p>
 
-	<p> How old are you? <input id = "age" type = "age" name = "age"> </p>
-	<p> Where do you go to school? <input id = "school" type = "school" name = "school"></p>
-	<p> Why do you want to volunteer with us? <input id = "answer" type = "answer" name = "answer"> </p>
+	<p> <div class = "fields"> How old are you? </div> <input id = "age" type = "age" name = "age"> </p>
+	<p> <div class = "fields"> Where do you go to school? </div> <input id = "school" type = "school" name = "school"></p>
+	<p> <div class = "fields"> Why do you want to volunteer with us? </div> <input id = "answer" type = "answer" name = "answer"> </p>
 		
-	<p class = "registerButton"> <input type = "submit" value = "Register"> </p>
+	<p class = "center"> <input id = "registerButton" type = "submit" value = "REGISTER"> </p>
 		
 	</form>
 </template>
