--- a/client/teenForm.html
+++ b/client/teenForm.html
@@ -26,7 +26,7 @@
 	<div class="boxContainer">
 	  <img class = "box"
 	 src="https://files.slack.com/files-tmb/T2ENBKC49-F3X5ST9L1-478d975b91/bring_it_on_icons_raster-01_1024.png"/>
-	 <input id="firstBox" name="firstBox" type="checkbox" value="first" class = "hidden"> 
+	 <input id="firstBox" name="interests" type="checkbox" value="communication" class = "hidden"> 
 	   <div id = "firstBox" class="overlay">
 		<div class="text"><p>Communication</p></div>
 	</div>
@@ -35,7 +35,7 @@
 	 
 	<div class="boxContainer">
 	  <img class="box2" src ="https://files.slack.com/files-tmb/T2ENBKC49-F3XUBRL2H-189eee501b/bring_it_on_icons_raster-02_1024.png"/>
-	  <input id="secondBox" name="secondBox" type="checkbox" value="second" class = "hidden"/>
+	  <input id="secondBox" name="interests" type="checkbox" value="internet" class = "hidden"/>
 	<div id = "secondBox" class="overlay">
 	  <div class="text"><p>The Internet</p></div>
 	  </div>
@@ -45,7 +45,7 @@
 	  
 	<div class="boxContainer">  
 	  <img class="box3" src ="https://files.slack.com/files-tmb/T2ENBKC49-F3YGBK64E-f6cecbc886/bring_it_on_icons_raster-03_1024.png"/>
-	  <input id="thirdBox" name="thirdBox" type="checkbox" value="third" class = "hidden"/>
+	  <input id="thirdBox" name="interests" type="checkbox" value="mobile" class = "hidden"/>
 	<div id = "thirdBox" class="overlay">
 		<div class="text"><p>Mobile Devices</p></div>
 	  </div>
@@ -54,7 +54,7 @@
 	  
 	 <div class="boxContainer">
 	  <img class="box4" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRNN7M-8928117b84/bring_it_on_icons_raster-04_1024.png" />
-	  <input id="fourBox" name="fourBox" type="checkbox" value="fourth" class = "hidden"/>
+	  <input id="fourBox" name="interests" type="checkbox" value="social" class = "hidden"/>
 	<div id = "fourBox" class="overlay">
 		<div class="text"><p>Social Media</p></div>
 	  </div>
@@ -63,7 +63,7 @@
 		
 	 <div class="boxContainer">
 	  <img class="box5" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRNTK5-3ce8095dbf/bring_it_on_icons_raster-05_1024.png" />
-	  <input id="fiveBox" name="fiveBox" type="checkbox" value="fifth" class = "hidden"/>
+	  <input id="fiveBox" name="interests" type="checkbox" value="computers" class = "hidden"/>
 	  <div id = "fiveBox" class="overlay">
 		<div class="text"><p>Computers</p></div>
 	  </div>
@@ -72,7 +72,7 @@
 		  
 	<div class="boxContainer">      
 	  <img class="box6" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRPAUT-1e0973148f/bring_it_on_icons_raster-06_1024.png"/>
-	  <input id="sixBox" name="sixBox" type="checkbox" value="sixth" class = "hidden"/>
+	  <input id="sixBox" name="interests" type="checkbox" value="word" class = "hidden"/>
 	<div id = "sixBox" class="overlay">
 		<div class="text"><p>Word Processing</p></div>
 	  </div>
