--- a/client/seniorForm.html
+++ b/client/seniorForm.html
@@ -4,10 +4,10 @@
 		
 		<div class = "row">
 		<div class = "col-md-6 col-sm-12">
-			<p> <div class = "fields"> FIRST NAME </div><input id = "firstName" type = "firstName" name = "firstName"> </p>
+			<p> <div class = "fields"> FIRST NAME </div><input id = "seniorFirst" type = "seniorFirst" name = "seniorFirst"> </p>
 		</div>
 		<div class = "col-md-6 col-sm-12">
-			<p> <div class = "fields"> LAST NAME </div><input id = "lastName" type = "lastName" name = "lastName"> </p>
+			<p> <div class = "fields"> LAST NAME </div><input id = "seniorLast" type = "seniorLast" name = "seniorLast"> </p>
 		</div>
 		</div>
 		<div class = "row">
@@ -27,8 +27,8 @@
 	<div class="boxContainer">
 	  <img class = "box"
 	 src="https://files.slack.com/files-tmb/T2ENBKC49-F3X5ST9L1-478d975b91/bring_it_on_icons_raster-01_1024.png" />
-	 <input id="first" name="first" type="checkbox" value="first" class = "hidden"> 
-	   <div class="overlay">
+	 <input id="firstBox" name="seniorInterests" type="checkbox" value="communication" class = "hidden"> 
+	   <div id = "firstBox" class="overlay">
 		<div class="text"><p>Communication</p></div>
 	</div>
 	  </div>
@@ -36,8 +36,8 @@
 	 
 	<div class="boxContainer">
 	  <img class="box2" src ="https://files.slack.com/files-tmb/T2ENBKC49-F3XUBRL2H-189eee501b/bring_it_on_icons_raster-02_1024.png" />
-	  <input id="second" name="second" type="checkbox" value="second" class = "hidden"/>
-	<div id = "firstBox" class="overlay">
+	  <input id="secondBox" name="seniorInterests" type="checkbox" value="internet" class = "hidden"/>
+	<div id = "secondBox" class="overlay">
 	  <div class="text"><p>The Internet</p></div>
 	  </div>
 	</div>
@@ -46,8 +46,8 @@
 	  
 	<div class="boxContainer">  
 	  <img class="box3" src ="https://files.slack.com/files-tmb/T2ENBKC49-F3YGBK64E-f6cecbc886/bring_it_on_icons_raster-03_1024.png"/>
-	  <input id="third" name="third" type="checkbox" value="third" class = "hidden"/>
-	<div id = "secondBox" class="overlay">
+	  <input id="thirdBox" name="seniorInterests" type="checkbox" value="mobile" class = "hidden"/>
+	<div id = "thirdBox" class="overlay">
 		<div class="text"><p>Mobile Devices</p></div>
 	  </div>
 	</div>
@@ -55,7 +55,7 @@
 	  
 	 <div class="boxContainer">
 	  <img class="box4" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRNN7M-8928117b84/bring_it_on_icons_raster-04_1024.png"/>
-	  <input id="four" name="four" type="checkbox" value="fourth" class = "hidden"/>
+	  <input id="fourBox" name="seniorInterests" type="checkbox" value="social" class = "hidden"/>
 	<div id = "fourBox" class="overlay">
 		<div class="text"><p>Social Media</p></div>
 	  </div>
@@ -64,7 +64,7 @@
 		
 	 <div class="boxContainer">
 	  <img class="box5" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRNTK5-3ce8095dbf/bring_it_on_icons_raster-05_1024.png" />
-	  <input id="five" name="five" type="checkbox" value="fifth" class = "hidden"/>
+	  <input id="fiveBox" name="seniorInterests" type="checkbox" value="computers" class = "hidden"/>
 	  <div id = "fiveBox" class="overlay">
 		<div class="text"><p>Computers</p></div>
 	  </div>
@@ -73,7 +73,7 @@
 		  
 	<div class="boxContainer">      
 	  <img class="box6" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRPAUT-1e0973148f/bring_it_on_icons_raster-06_1024.png" />
-	  <input id="six" name="six" type="checkbox" value="sixth" class = "hidden"/>
+	  <input id="sixBox" name="seniorInterests" type="checkbox" value="word" class = "hidden"/>
 	<div id = "sixBox" class="overlay">
 		<div class="text"><p>Word Processing</p></div>
 	  </div>
