--- a/client/home.html
+++ b/client/home.html
@@ -31,7 +31,7 @@
 	  
 	 </div>
 	  <div class = "col-sm-8 col-xs-12">
-		<img id = "homeboxes" src = "https://files.slack.com/files-tmb/T2ENBKC49-F3XPRRY75-6213a8cee4/bring_it_on_icons_raster_1024.png">
+		<img id = "homeboxes" src = "interests.png">
 	  </div>
   </div>
   </div>
