--- a/client/seniorForm.html
+++ b/client/seniorForm.html
@@ -22,11 +22,12 @@
 	  <h1 class = "learning"> What would you like to learn? </h1><p class = "learnPara">Roll your mouse over a skill to learn more about it and click on the box to add it to your list!</p>
 	</div>
 	<br/>
-
+	
+	<center>
 	<div class = "boxes">
 	<div class="boxContainer">
 	  <img class = "box"
-	 src="https://files.slack.com/files-tmb/T2ENBKC49-F3X5ST9L1-478d975b91/bring_it_on_icons_raster-01_1024.png" />
+	 src="one.png" />
 	 <input id="firstBox" name="seniorInterests" type="checkbox" value="communication" class = "hidden"> 
 	   <div id = "firstBox" class="overlay">
 		<div class="text"><p>Communication</p></div>
@@ -35,7 +36,7 @@
 	  
 	 
 	<div class="boxContainer">
-	  <img class="box2" src ="https://files.slack.com/files-tmb/T2ENBKC49-F3XUBRL2H-189eee501b/bring_it_on_icons_raster-02_1024.png" />
+	  <img class="box2" src ="two.png" />
 	  <input id="secondBox" name="seniorInterests" type="checkbox" value="internet" class = "hidden"/>
 	<div id = "secondBox" class="overlay">
 	  <div class="text"><p>The Internet</p></div>
@@ -45,7 +46,7 @@
 	  
 	  
 	<div class="boxContainer">  
-	  <img class="box3" src ="https://files.slack.com/files-tmb/T2ENBKC49-F3YGBK64E-f6cecbc886/bring_it_on_icons_raster-03_1024.png"/>
+	  <img class="box3" src ="three.png"/>
 	  <input id="thirdBox" name="seniorInterests" type="checkbox" value="mobile" class = "hidden"/>
 	<div id = "thirdBox" class="overlay">
 		<div class="text"><p>Mobile Devices</p></div>
@@ -54,7 +55,7 @@
 	<br>
 	  
 	 <div class="boxContainer">
-	  <img class="box4" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRNN7M-8928117b84/bring_it_on_icons_raster-04_1024.png"/>
+	  <img class="box4" src="four.png"/>
 	  <input id="fourBox" name="seniorInterests" type="checkbox" value="social" class = "hidden"/>
 	<div id = "fourBox" class="overlay">
 		<div class="text"><p>Social Media</p></div>
@@ -63,7 +64,7 @@
 		
 		
 	 <div class="boxContainer">
-	  <img class="box5" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRNTK5-3ce8095dbf/bring_it_on_icons_raster-05_1024.png" />
+	  <img class="box5" src="five.png" />
 	  <input id="fiveBox" name="seniorInterests" type="checkbox" value="computers" class = "hidden"/>
 	  <div id = "fiveBox" class="overlay">
 		<div class="text"><p>Computers</p></div>
@@ -72,15 +73,16 @@
 		  
 		  
 	<div class="boxContainer">      
-	  <img class="box6" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRPAUT-1e0973148f/bring_it_on_icons_raster-06_1024.png" />
+	  <img class="box6" src="six.png" />
 	  <input id="sixBox" name="seniorInterests" type="checkbox" value="word" class = "hidden"/>
 	<div id = "sixBox" class="overlay">
 		<div class="text"><p>Word Processing</p></div>
 	  </div>
 	</div>
 	</div>
+	</center>
 
-	<p>
+	<p class = "learnPara">
 	Skills you have selected: <div id="display">
 	</div>
 	</p>
