--- a/client/seniorInfo.html
+++ b/client/seniorInfo.html
@@ -1,7 +1,9 @@
 <template name = "seniorInfo">
-<br> <br> <br> <br> <br> <br> <br> <br>
+	<div class = "info">
+	<h3 class = "signIn"> Senior Submissions </h3>
 	{{#each groups}}
 		<br> <br>
 		<p>{{seniorFirst}} {{seniorLast}}</p>
 	{{/each}}
+	</div>
 </template>
