--- a/client/teenForm.html
+++ b/client/teenForm.html
@@ -25,7 +25,7 @@
 	<div class = "boxes">
 	<div class="boxContainer">
 	  <img class = "box"
-	 src="https://files.slack.com/files-tmb/T2ENBKC49-F3X5ST9L1-478d975b91/bring_it_on_icons_raster-01_1024.png"/>
+	 src="one.png"/>
 	 <input id="firstBox" name="interests" type="checkbox" value="communication" class = "hidden"> 
 	   <div id = "firstBox" class="overlay">
 		<div class="text"><p>Communication</p></div>
@@ -34,7 +34,7 @@
 	  
 	 
 	<div class="boxContainer">
-	  <img class="box2" src ="https://files.slack.com/files-tmb/T2ENBKC49-F3XUBRL2H-189eee501b/bring_it_on_icons_raster-02_1024.png"/>
+	  <img class="box2" src ="two.png"/>
 	  <input id="secondBox" name="interests" type="checkbox" value="internet" class = "hidden"/>
 	<div id = "secondBox" class="overlay">
 	  <div class="text"><p>The Internet</p></div>
@@ -44,7 +44,7 @@
 	  
 	  
 	<div class="boxContainer">  
-	  <img class="box3" src ="https://files.slack.com/files-tmb/T2ENBKC49-F3YGBK64E-f6cecbc886/bring_it_on_icons_raster-03_1024.png"/>
+	  <img class="box3" src ="three.png"/>
 	  <input id="thirdBox" name="interests" type="checkbox" value="mobile" class = "hidden"/>
 	<div id = "thirdBox" class="overlay">
 		<div class="text"><p>Mobile Devices</p></div>
@@ -53,7 +53,7 @@
 	<br>
 	  
 	 <div class="boxContainer">
-	  <img class="box4" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRNN7M-8928117b84/bring_it_on_icons_raster-04_1024.png" />
+	  <img class="box4" src="four.png" />
 	  <input id="fourBox" name="interests" type="checkbox" value="social" class = "hidden"/>
 	<div id = "fourBox" class="overlay">
 		<div class="text"><p>Social Media</p></div>
@@ -62,7 +62,7 @@
 		
 		
 	 <div class="boxContainer">
-	  <img class="box5" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRNTK5-3ce8095dbf/bring_it_on_icons_raster-05_1024.png" />
+	  <img class="box5" src="five.png" />
 	  <input id="fiveBox" name="interests" type="checkbox" value="computers" class = "hidden"/>
 	  <div id = "fiveBox" class="overlay">
 		<div class="text"><p>Computers</p></div>
@@ -71,7 +71,7 @@
 		  
 		  
 	<div class="boxContainer">      
-	  <img class="box6" src="https://files.slack.com/files-tmb/T2ENBKC49-F3XPRPAUT-1e0973148f/bring_it_on_icons_raster-06_1024.png"/>
+	  <img class="box6" src="six.png"/>
 	  <input id="sixBox" name="interests" type="checkbox" value="word" class = "hidden"/>
 	<div id = "sixBox" class="overlay">
 		<div class="text"><p>Word Processing</p></div>
