--- a/client/admin.html
+++ b/client/admin.html
@@ -1,9 +1,8 @@
 <template name = "admin">
 	<form class = "admin">
-		<h3> Register </h3>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br>
-		<p> Email: <input id = "email" type = "email" name = "email"></p>
-		<p> Password: <input id = "password" type = "password" name = "password"></p>
-		<p class = "registerButton"> <input type = "submit" value = "Register"> </p>
+		<center> <h3 class = "signIn"> Register </h3> </center>
+		<p> <div class = "fields">EMAIL </div> <input id = "email" type = "email" name = "email"></p>
+		<p> <div class = "fields">PASSWORD </div> <input id = "password" type = "password" name = "password"></p>
+		<p class = "registerButton"> <input type = "submit" value = "Register" style = "background-color: #3E8076;"> </p>
 	</form>
 </template>
