--- a/client/adminLogin.html
+++ b/client/adminLogin.html
@@ -1,8 +1,8 @@
 <template name = "adminLogin">
 	<form class = "login">
-	<h3> Login </h3>
-	<p>Email: <input type = "email" name = "email"></p>
-	<p>Password: <input type = "password" name = "password"></p>
-	<p> <input type = "submit" value = "Login"> </p>
+	<center> <h3 class = "signIn"> Login </h3> </center>
+	<p> <div class = "fields">EMAIL </div><input type = "email" name = "email"></p>
+	<p> <div class = "fields">PASSWORD </div><input type = "password" name = "password"></p>
+	<p> <input type = "submit" value = "Login" style = "background-color: #3E8076;"> </p>
 	</form>
 </template>
