--- a/client/main.html
+++ b/client/main.html
@@ -4,6 +4,7 @@
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+	<meta name="viewport" content="width=device-width" />
 </head>
 
 <body>
