--- a/client/about.html
+++ b/client/about.html
@@ -1,7 +1,12 @@
 <template name = "about">
 	<div class = "aboutPage">
 	<h3 class = "signIn"> About Us </h3>
-	<p style = "font-style: Raleway; font-size: 24px; text-align: left;"> Bridged is meant for both seniors who’d like to learn certain technology skills, and teenagers aged 14-18 who are passionate about volunteering and teaching them. Bridged’s purpose is to bridge the gap between teens and elders through something we can all connect with, technology. If you are a senior at Elk Ridge Retirement, you can request for an entrance number, and sign up through the form. Make sure to click on all the skills that you’d like to know, and you will get notified shortly on possible volunteer sessions. If you are a teenager, select all of the tech skills that you feel you’re most qualified in, and go through the rest of the form, and you will get contacted to set up a meeting. The goal of Bridged is to benefit seniors and teens alike, by allowing them to work together, and learn from each other. </p>
-	<p style = "font-style: Raleway; font-size: 24px; text-align: left;"> Bridged was created by Grace Erixon, Tera Maher, and Ramya Iyer. </p>
+	<p style = "font-style: Raleway; font-size: 24px; text-align: left; color: #3E8076;"> Bridged is meant for both seniors who’d like to learn certain technology skills,
+		and teenagers aged 14-18 who are passionate about volunteering and teaching them. Bridged’s purpose is to bridge the gap between teens and elders through 
+		something we can all connect with, technology. If you are a senior at Elk Ridge Retirement, you can request a teen volunteer who’s qualified with the 
+		skills listed on the site by following the instructions there. If you are a teenager, access the form and select all of the tech skills that you feel you 
+		specialize in, and go through the rest of the form, and you will get contacted to set up a meeting. The goal of Bridged is to benefit seniors and teens 
+		alike, by allowing them to work together, and learn from each other. </p>
+	<p style = "font-style: Raleway; font-size: 24px; text-align: left; color: white;"> Bridged was created by Grace Erixon, Tera Maher, and Ramya Iyer for the 2017 Bring IT On Competition. </p>
 	</div>
 </template>
