--- a/client/admin.html
+++ b/client/admin.html
@@ -3,6 +3,6 @@
 		<center> <h3 class = "signIn"> Register </h3> </center>
 		<p> <div class = "fields">EMAIL </div> <input id = "email" type = "email" name = "email"></p>
 		<p> <div class = "fields">PASSWORD </div> <input id = "password" type = "password" name = "password"></p>
-		<p class = "registerButton"> <input type = "submit" value = "Register" style = "background-color: #3E8076;"> </p>
+		<p class = "center"> <input id = "registerButton" type = "submit" value = "REGISTER" style = "background-color: #3E8076;"> </p>
 	</form>
 </template>
