--- a/client/home.html
+++ b/client/home.html
@@ -1,63 +1,52 @@
 <template name = "home">
 	<div class = "topHome">
-  <div class = "bridgeGap">
-    <h1> LET'S BRIDGE THE GAP </h1>
-    <p>Together, by connecting elders who want to learn with bright teens who know tech, we can do it. </p>
-  </div>
-
-</div>
-
-
-
-<!-- second page -->
-
-
-
-<div class = "secondHome">
-	<div class = "row">
-		<div class = "col-xs-12 blueSpace"></div>
-	</div>
-  <div class = "aboutHome">
-  <div class = "row">
-	<div id = "BridgedDescription">
-	  <div class = "col-sm-4 col-xs-12">
-	  <div class = "buttomMargin">
-		<h3> A service exclusive to Elk Ridge Village residents, Bridged’s mission is to connect elders who want to learn tech with teen volunteers who can show them how. If you are an elder, you can sign up to learn a tech skill and if you are a teen, you can apply to teach it!</h3>
-		<a href="{{pathFor route = 'about'}}" class = "btnAbout"> GO TO OUR ABOUT PAGE </a> 
-	</div>
-	  </div>
-	
-	  
-	  
-	 </div>
-	  <div class = "col-sm-8 col-xs-12">
-		<img id = "homeboxes" src = "interests.png">
-	  </div>
-  </div>
-  </div>
-</div>
-  
-<div class = "getStarted">
-	<div class = "row">
-	<div class = "col-sm-5 col-xs-12 start1">
-		<div class = "seniorsTeen">
-			<h1 style = "font-family: Comfortaa;">SENIORS</h1>
+		<div class = "bridgeGap">
+			<h1> LET'S BRIDGE THE GAP </h1>
+			<p>Together, by connecting elders who want to learn with bright teens who know tech, we can do it. </p>
 		</div>
-		  <h3 style = "font-family: Oswald;">GET STARTED</h3>
+	</div>
 
+	<div class = "secondHome">
+		<div class = "row">
+			<div class = "col-xs-12 blueSpace">
+			</div>
+		</div>
+		<div class = "aboutHome">
+		<div class = "row">
+			<div id = "BridgedDescription">
+				<div class = "col-sm-4 col-xs-12">
+					<div class = "buttomMargin">
+						<h3> A service exclusive to Elk Ridge Village residents, Bridged’s mission is to connect elders who want to learn tech with teen volunteers who can show them how. If you are an elder, you can sign up to learn a tech skill and if you are a teen, you can apply to teach it!</h3>
+						<a href="{{pathFor route = 'about'}}" class = "btnAbout"> GO TO OUR ABOUT PAGE </a> 
+					</div>
+				</div>
+			</div>
+				<div class = "col-sm-8 col-xs-12">
+					<img id = "homeboxes" src = "interests.png">
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class = "getStarted">
+	<div class = "row">
+		<div class = "col-sm-5 col-xs-12 start1">
+			<div class = "seniorsTeen">
+				<h1 style = "font-family: Comfortaa;">SENIORS</h1>
+			</div>
+			<h3 style = "font-family: Oswald;">LEARN MORE</h3>
 			<a href="{{pathFor route = 'senior'}}" class="btn">HERE</a>
-	</div>
-	<div class = "col-sm-2 col-xs-12">
-		<div class = "verticalLine"> </div>
-	</div>
-	<div class = "col-sm-5 col-xs-12 start2">
-		<div class = "seniorsTeen">
-		  <h1 style = "font-family: Comfortaa;">TEENS</h1>
 		</div>
-		  <h3 style = "font-family: Oswald;">GET STARTED</h3>
-
-			<a href="{{pathFor route = 'teen'}}" class="btn">HERE</a>
+		<div class = "col-sm-2 col-xs-12">
+			<div class = "verticalLine"> </div>
+		</div>
+		<div class = "col-sm-5 col-xs-12 start2">
+			<div class = "seniorsTeen">
+				<h1 style = "font-family: Comfortaa;">TEENS</h1>
+			</div>
+				<h3 style = "font-family: Oswald;">GET STARTED</h3>
+				<a href="{{pathFor route = 'teen'}}" class="btn">HERE</a>
 		</div>
 	</div>
-</div>
+	</div>
 </template>
