--- a/client/nav.html
+++ b/client/nav.html
@@ -6,7 +6,7 @@
 	  <li><a href="{{pathFor route = 'contact'}}">Contact</a></li>
 	  <li><a href="{{pathFor route = 'about'}}">About</a></li>
 	  {{#if currentUser}}
-	  <li><a href="#" class = "logout" style="-webkit-border-radius: 99px;-moz-border-radius: 99px;order-radius: 99px;">Logout</a></li>
+	  <li><a href="#" class = "logout">Logout</a></li>
 	  <li><a href="{{pathFor route = 'info'}}">Results</a></li>
 	  {{else}}
 	  <li><a href="{{pathFor route = 'senior'}}">Senior</a></li>
