--- a/client/senior.html
+++ b/client/senior.html
@@ -82,7 +82,8 @@
 		</div>
 	</div>
 	</center>
-
+	</div>
+	<div class = "blurbs">
 		<p class = "learnPara"> Social Media </p> <p class = "para"> Do you want to be able to share the things you do with people you care about? Then learning the basics of social media may be for you! You can request to learn how to set up and Instagram account for example, of play around with Snapchat. Whatever it is, your teen volunteer should be able to help get you started. </p>
 		<p class = "learnPara"> Communication </p> <p class = "para">  If you want to connect with your family and friends, basic communication skills is a great place to start. Get comfortable with email, texting, or even video chat, and be on your way to being able to talk to anyone you want, anytime you want. </p>
 		<p class = "learnPara"> The Internet </p> <p class = "para">  Being able to access a web browser and use the internet is an incredibly useful thing to know. Of course, if you’ve accessed this site, you’re one step closer to being a pro. Even then, there’s a ton of cool ways you can use your browser to your advantage. </p>
