--- a/client/about.html
+++ b/client/about.html
@@ -7,6 +7,6 @@
 		skills listed on the site by following the instructions there. If you are a teenager, access the form and select all of the tech skills that you feel you 
 		specialize in, and go through the rest of the form, and you will get contacted to set up a meeting. The goal of Bridged is to benefit seniors and teens 
 		alike, by allowing them to work together, and learn from each other. </p>
-	<p style = "font-style: Raleway; font-size: 24px; text-align: left; color: white;"> Bridged was created by Grace Erixon, Tera Maher, and Ramya Iyer for the 2017 Bring IT On Competition. </p>
+	<p style = "font-style: Raleway; font-size: 24px; text-align: right; color: white;"> Bridged was created by Grace Erixon, Tera Maher, and Ramya Iyer for the 2017 Bring IT On Competition. </p>
 	</div>
 </template>
