--- a/client/home.html
+++ b/client/home.html
@@ -38,7 +38,9 @@
 			<a href="{{pathFor route = 'senior'}}" class="btn">HERE</a>
 		</div>
 		<div class = "col-sm-2 col-xs-12">
+			<center>
 			<div class = "verticalLine"> </div>
+			</center>
 		</div>
 		<div class = "col-sm-5 col-xs-12 start2">
 			<div class = "seniorsTeen">
